Added cotent on HTML styles using css

--- a/index.html
+++ b/index.html
@@ -1,64 +1,134 @@
+Skip to content
 
-
-<!--to write html, tags-->
-<!--start tag <> closing tag </> -->
-<!--</>  -->
+Search…
+All gists
+Back to GitHub
+@amyjuma18
+@josephbill
+josephbill/start.html
+Created 11 hours ago • Report abuse
+0
+0
+Code
+Revisions
+1
+<script src="https://gist.github.com/josephbill/b1c6197009ef2cd5066a8c5b2512f941.js"></script>
+start.html
+<!--this declares the code as HTML based -->
+<!DOCTYPE html>
+<!--to write html , tags -->
+<!-- start tag <>  closing tag </>  -->
+<!--   </>   -->
 <html>
-<!--here we can write more html-->
-<!--meta data:more information about this web page(html script in use):heat-->
+<!-- here we can write more html elements -->
+<!-- meta data : more information about this web page(html script in use) : head -->
 <head>
-    <!-- links to styling classes: css/links to other tools(BOOTSTRAP)-->
-    <!-- href and rel are attributes for the link element: attributes is meta data : more information about element-->
-
-
+<!--   links to styling classes : css / links to other tools (BOOTSTRAP) -->
+<!--    href and rel are attributes for the link element : attributes is meta data : more info about an element -->
+    <link href="css/styles.css" rel="stylesheet"/>
+    <title>Art Homepage</title>
 </head>
-<!--body renders/ outputs what my user can see-->
+<!--body renders/ outputs what my user can see -->
 <body>
-<link href="css/styles.css" rel="stylesheet"/=<<title>Art Homepage</title>
-or external link(webpages not in your project: hosted/deployed))- -->
-<a href="public/about.html">Internal link: Go to about.html</a>
-<a href="https://www.google.com"target="-blank"></a>
 
-<p>Hello World</p>
+<!--  to do a paragraph use the p element -->
+  <p>Hello World</p>
+  <h4>Block level</h4>
+<!-- to have an internal web page(other html files) or external link(web pages not in your project: hosted/deployed))- -->
+<!-- anchor tag-->
+<!--internal linking-->
+<p>
+      <a href="public/about.html">Internal Link : Go to About.html</a>
 
-
-<!--Headings-->
-  <h1>Heading</h1>
-  <h2>Heading</h2>
-  <h3>Heading</h3>
-  <h4>Heading</h4>
-  <h5>Heading</h5>
-  <h6>Heading</h6>
+</p>
+<!--external-->
+   <a href="https://www.google.com" target="_blank">External link : goes to other hosted webpages </a>
+<!--headings-->
+   <h1>Heading</h1>
+   <h2>Heading</h2>
+   <h3>Heading</h3>
+   <h4>Heading</h4>
+   <h5>Heading</h5>
+   <h6>Heading</h6>
 <!--lists-->
-<p>Premium League Table</p>
-<li> <a href="https://www.arsenal.com">Arsenal</a></li>
-<li>Man City</li>
-<li>Newcastle United</li>
-</ol>
-   <!--anchor tag-->
-   <!--internal linking-->
-<!--images-->
-<img src="assets pycharm img.jpg">
+<!--ordered lists 1. 2. -->
+    <ol>
+        <h4>Premier League Table</h4>
 
-<thead>
-  <tr>
-    <th>Name</th>
-    <th>ID Number</th>
-    <th>D.O.B</th>
-    <th>Age</th>
-  </tr>
-</thead>
-   <tbody>
-<!--1 record in the table-->
-<tr>
-  <td>juma</td>
-  <td>26th january</td>
-  <td>aquarius</td>
-</tr>
-  </tbody>
-<!--button-->
-<button>Click me</button>
+        <li>  <a href="https://www.arsenal.com">Arsenal</a> </li>
+        <li>Man City</li>
+        <li>Newcastle United</li>
+        <li>Manchester United</li>
+    </ol>
+<!--unordered lists . . . -->
+     <ul>
+         <li>Kales</li>
+         <li>Onions</li>
+         <li>Tomatoes</li>
+     </ul>
+
+<!-- images -->
+<img src="assests/image.jpg" width="200" height="200"/>
+
+<!-- table -->
+<table>
+    <thead>
+      <tr>
+          <th>Name</th>
+          <th>ID Number</th>
+          <th>D.O.B</th>
+          <th>Age</th>
+      </tr>
+    </thead>
+    <tbody>
+<!--    1 record in the table -->
+       <tr>
+           <td>Joseph</td>
+           <td>xxxxxx</td>
+           <td>20th November</td>
+           <td>26</td>
+       </tr>
+<!--  have 3 records -->
+
+    </tbody>
+
+</table>
+
+<!-- button -->
+<button>Click Me</button>
+
+</body>
+</html>
 
 
 
-</tbody>
+
+
+
+
+
+@amyjuma18
+
+Add heading textAdd bold text, <Ctrl+b>Add italic text, <Ctrl+i>
+Add a quote, <Ctrl+Shift+.>Add code, <Ctrl+e>Add a link, <Ctrl+k>
+Add a bulleted list, <Ctrl+Shift+8>Add a numbered list, <Ctrl+Shift+7>Add a task list, <Ctrl+Shift+l>
+Directly mention a user or team
+Reference an issue or pull request
+Leave a comment
+No file chosen
+Attach files by dragging & dropping, selecting or pasting them.
+Styling with Markdown is supported
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
